--- a/src/main/resources/templates/menu-details.html
+++ b/src/main/resources/templates/menu-details.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,8 +17,8 @@
         <p th:text="${el.size}"/>
         <p th:text="${el.price}+р"/>
         <p th:text="${el.composition}"/>
-        <a th:href="'/menu/' + 'edit/'+ ${el.id}" class="btn btn-warning">Изменить</a>
-        <a th:href="'/menu/' + 'remove/'+ ${el.id}" class="btn btn-warning">Удалить</a>
+        <a sec:authorize="hasAnyAuthority('Admin')" th:href="'/menu/' + 'edit/'+ ${el.id}" class="btn btn-warning">Изменить</a>
+        <a sec:authorize="hasAnyAuthority('Admin')" th:href="'/menu/' + 'remove/'+ ${el.id}" class="btn btn-warning">Удалить</a>
     </div>
 </div>
 
