--- a/src/main/resources/templates/pattern/header.html
+++ b/src/main/resources/templates/pattern/header.html
@@ -1,19 +1,24 @@
 <div th:fragment="header">
     <div class="container">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            <div id="PizzaHub">
+                <span>PizzaHub</span>
+            </div>
             <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
             </a>
-
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/" class="nav-link px-2 link-secondary">Главная</a></li>
                 <li><a href="/menu" class="nav-link px-2 link-dark">Меню</a></li>
-                <li><a href="/menu/add" class="nav-link px-2 link-dark">Добавить</a></li>
+                <li><a sec:authorize="hasAnyAuthority('User')"href="/cart" class="nav-link px-2 link-secondary">Корзина</a></li>
+                <li><a sec:authorize="hasAnyAuthority('Admin')" href="/menu/add" class="nav-link px-2 link-dark">Добавить</a></li>
                 <li><a href="/about" class="nav-link px-2 link-dark">О нас</a></li>
                 <li><a href="/login" class="btn btn-outline-primary me-2">Войти</a></li>
                 <li><a href="/sign-up" class="btn btn-outline-primary me-2">Регистрация</a></li>
-                <li><a href="/list_users" class="nav-link px-2 link-dark">Список пользователей</a></li>
+                <li><a sec:authorize="hasAnyAuthority('Admin')" href="/list_users" class="nav-link px-2 link-dark">Список пользователей</a></li>
             </ul>
+
         </header>
+<!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
     </div>
 </div>
