--- a/src/main/resources/templates/menu-add.html
+++ b/src/main/resources/templates/menu-add.html
@@ -14,6 +14,7 @@
         <input type="text" name="size" placeholder="Введите размерность" class="form-control"><br>
         <input type="text" name="price" placeholder="Введите цену" class="form-control"><br>
         <input type="text" name="composition" placeholder="Введите состав" class="form-control"><br>
+        <input type="file" name="image" placeholder="Добавить картинку">
         <button type="submit" class="btn btn-success">Добавить позицию</button>
         </form>
     </div>
