--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,51 @@
     <title>PizzaHub - самая быстрая доставка по Москве</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
     <header th:insert="pattern/header :: header"></header>
-    <p th:text="'Hello, ' + ${title} + '!'" />
+    <style>
+        p {
+            color: navy;
+            font-family: Arial, sans-serif;
+            font-size: 110%;
+        }
+    </style>
+    <table height="150%" width="1024" align="center" cellpadding="0" cellspacing="0" border="0">
+        <tr><td valign="top">
 
-</body>
+            <table width="100%" height="90" bgcolor="ffffff" cellpadding="0" cellspacing="0" border="0" align="center">
+                <tr><td><p align="center"> В день рождения скидка 10% на любую пиццу в ассортименте! </p></td></tr>
+            </table>
+
+
+            <table width="100%" height="600" cellpadding="0" cellspacing="0" border="0">
+                <tr><td>
+
+
+                    <table width="100%" height="100%" bgcolor="ffffff" cellpadding="0" cellspacing="0" border="0">
+
+                            <td valign="top" width="600"  bgcolor="ffffff">
+
+                                <img src="/img/HB.jpg">
+
+                            </td>
+
+                        </tr>
+                    </table>
+
+                </td></tr>
+            </table>
+
+
+            <table width="100%" height="90" bgcolor="ffffff" cellpadding="0" cellspacing="0" border="0">
+                <tr><td>
+
+                    <p align="center">Скидка предоставляется при предъявлении паспорта в день рождения</p></td></tr>
+            </table>
+        </td></tr>
+    </table>
+
+    </body>
 </html>
