--- a/src/main/resources/templates/shopping_cart.html
+++ b/src/main/resources/templates/shopping_cart.html
@@ -19,45 +19,72 @@
             <input type="submit" value="Выйти" />
             </form>
     </div>
-<!--        <br/>-->
-        <div class="row">
-            <div class="col">
+
+        <div class="row m-1">
+            <div class="col-sm-8">
                 <th:block  th:each="item, status:${cartItems}">
                     <div class="row border rounded">
-                        <div class="col">
+                        <div class="col-1">
                             <div>[[${status.count}]]</div>
-                            <div><a class="fas fa-trash icon-dark" th:href="@{/}"></a></div>
-                        </div>
-<!--                        <div class="col">-->
-<!--                            <img th:scr="@{${menu.mainImagePath}}" class="img-fluid"/>-->
-<!--                        </div>-->
-                        <div class="col">
                             <div>
-                                <a th:href="@{/menu/{id}}" target="_blank">
+                                <a href="#!" type="button" class="card-link-secondary small text-uppercase mr-3"><i
+                                        class="fas fa-trash-alt mr-1"></i> Remove item </a>
+                            </div>
+
+                        </div>
+                        <div class="col-3">
+                            <img th:src="${'/img/'+item.menu.mainImage}" class="img-fluid"/>
+                        </div>
+                        <div class="col-6">
+                            <div>
+                                <a th:href="${'/menu/'+ item.menu.id}" target="_blank">
                                     <b>[[${item.menu.title}]]</b>
                                 </a>
                             </div>
-                            <div><input type="number" th:value="${item.quantity}" class="form-control"/></div>
+<!--                            <div class="def-number-input number-input safari_only mb-0 w-100">-->
+<!--                                <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"-->
+<!--                                        class="minus" th:pid="${item.menu.id}">-</button>-->
+<!--                                <form th:action="@{/changeItem}" method="post">-->
+<!--                                    <input class="quantity"  th:name="'quantity'" th:id="'quantity' + ${item.menu.id}"-->
+<!--                                           min="0" name="quantity" type="number" th:value="${item.quantity}">-->
+                                <b>Количество: [[${item.quantity}]]</b>
+<!--                                    <input type="hidden" name="menu_id" th:value="${item.menu.id}">-->
+<!--                                    <input type="hidden" name="user_id" th:value="${customer.getUsername()}">-->
+<!--                                    <button class="btn btn-primary" id="btnAddToCart" type="submit" value="OK">Изменить</button>-->
+<!--                                </form>-->
+<!--                                <button onclick="this.parentNode.querySelector('input[type=number]').stepUp()"-->
+<!--                                        class="plus" th:pid="${item.menu.id}">+</button>-->
+<!--                            <div>-->
+<!--                                <b>[[${item.quantity}]]</b>-->
+<!--                            </div>-->
                             <div>
                                 <span>X</span>
                                 <span>[[${item.menu.price}]]</span>
-                            </div>
                             <div>
-                                <span>=</span><span class="=h4"> [Subtotal]</span>
+                                <span></span><span class="=h4">Итоговая цена = [[${item.quantity}*${item.menu.price}]]</span>
                             </div>
                         </div>
                     </div>
+                    <div class="row m-1">&nbsp;</div>
+                    </div>
                 </th:block>
             </div>
-
-            <div class="col">
+            <div class="col-sm-4">
+                <div>
+                    <span>Итого:</span>
+                </div>
+                <div class="mt-2" th:unless="${#lists.isEmpty(cartItems)}">
+                    <span class="h2">Суммарно: </span>
+                </div>
+                <div class="mt-2">
+                    <button class="btn btn-danger p-3 mt-2">Подтвердить</button>
+                </div>
             </div>
-
+        </div>
             <div th:if="${#lists.isEmpty(cartItems)}">
                 <h3 align="left">Вы ничего не добавили</h3>
             </div>
 
-        </div>
 
 </body>
 </html>
