--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,48 +7,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
-    <header th:insert="pattern/header :: header"></header>
-    <style>
-        p {
-            color: navy;
-            font-family: Arial, sans-serif;
-            font-size: 110%;
-        }
-    </style>
-    <table height="150%" width="1024" align="center" cellpadding="0" cellspacing="0" border="0">
-        <tr><td valign="top">
-
-            <table width="100%" height="90" bgcolor="ffffff" cellpadding="0" cellspacing="0" border="0" align="center">
-                <tr><td><p align="center"> В день рождения скидка 10% на любую пиццу в ассортименте! </p></td></tr>
-            </table>
-
-
-            <table width="100%" height="600" cellpadding="0" cellspacing="0" border="0">
-                <tr><td>
-
-
-                    <table width="100%" height="100%" bgcolor="ffffff" cellpadding="0" cellspacing="0" border="0">
-
-                            <td valign="top" width="600"  bgcolor="ffffff">
-
-                                <img src="/img/HB.jpg">
-
-                            </td>
-
-                        </tr>
-                    </table>
-
-                </td></tr>
-            </table>
-
-
-            <table width="100%" height="90" bgcolor="ffffff" cellpadding="0" cellspacing="0" border="0">
-                <tr><td>
-
-                    <p align="center">Скидка предоставляется при предъявлении паспорта в день рождения</p></td></tr>
-            </table>
-        </td></tr>
-    </table>
-
-    </body>
+<header th:insert="pattern/header :: header"></header>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="/img/HB2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="/img/HB.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="/img/HB.jpg" class="d-block w-100" alt="...">
+        </div>
+    </div>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script>
+        var myCarousel = document.querySelector('#carouselExampleSlidesOnly')
+        var carousel = new bootstrap.Carousel(myCarousel, {
+            interval: 6000,
+            wrap: false
+        })
+    </script>
+</body>
 </html>
