--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,33 +1,193 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>PizzaHub - самая быстрая доставка по Москве</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <title>Getting Started: Serving Web Content</title>
+        <header th:insert="pattern/header :: header"></header>
+    <style>
+        body {
+            background-image: url("/img/backgr.png");
+            font-family: 'Montserrat Alternates', sans-serif;
+        }
+        .post-wrap {
+            max-width: 1120px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        .post-item {
+            padding: 15px;
+            cursor: pointer;
+        }
+        .post-item * {
+            transition: .3s linear;
+        }
+        .item-content {
+            background: #117a8b;
+            padding: 40px;
+        }
+        .item-icon {
+            margin-bottom: 20px;
+        }
+        .item-icon:before {
+            content: "";
+            font-family: FontAwesome;
+            color: #F09EA3;
+            font-size: 50px;
+            line-height: 1;
+        }
+        .post-item:hover .item-icon, .post-item:hover .item-body h3, .post-item:hover .item-body p {
+            transform: translateY(-8px);
+        }
+        .item-body {
+            color: #F5E2CD;
+            font-size: 14px;
+        }
+        .item-body h3 {
+            font-weight: 500;
+            margin-bottom: 15px;
+            transition-delay: .05s;
+        }
+        .item-body p {
+            transition-delay: .1s;
+        }
+        .item-footer {
+            padding-top: 15px;
+        }
+        .link {
+            text-decoration: none;
+            display: inline-block;
+            overflow: hidden;
+            position: relative;
+            padding-right: 30px;
+            font-size: 12px;
+            text-transform: uppercase;
+            font-weight: 600;
+            color: #F5E2CD;
+        }
+        .link:before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            bottom: 0;
+            height: .125rem;
+            margin: auto;
+            background: #F09EA3;
+            transform: scaleX(.2);
+            transform-origin: left center;
+            z-index: 0;
+            transition: .6s cubic-bezier(.6, .01, 0, 1);
+        }
+        .link span {
+            display: inline-block;
+            position: relative;
+            transform: translateX(-200%);
+            transition: .6s cubic-bezier(.6, .01, 0, 1);
+        }
+        .post-item:hover .link span {
+            transform: translateX(0%);
+        }
+        .post-item:hover .link:before {
+            transform-origin: right center;
+        }
+        @media (min-width: 768px) {
+            .post-item {
+                flex-basis: 50%;
+                flex-shrink: 0;
+            }
+            @media (min-width: 960px) {
+                .post-item {
+                    flex-basis: 33.333333333%;
+                }
+            }
+        }
+
+    </style>
 </head>
 <body>
-<header th:insert="pattern/header :: header"></header>
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="/img/HB2.jpg" class="d-block w-100" alt="...">
+<div class="">
+    <h1 style="color: #413D4C">heheh</h1>
+</div>
+    <div class="post-wrap">
+        <div class="post-item">
+            <div class="item-content">
+                <div class="item-icon group"></div>
+                <div class="item-body">
+                    <h3>Акции</h3>
+                    <p>Зарегестрируйтесь, получите нашу бонусную карту и оплачивайте покупки с 10% скидкой!</p>
+                </div>
+                <div class="item-footer">
+                    <a href="/bonus" class="link"><span>Подробнее</span></a>
+                </div>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img src="/img/HB.jpg" class="d-block w-100" alt="...">
+
+        <div class="post-item">
+            <div class="item-content">
+                <div class="item-icon tree"></div>
+                <div class="item-body">
+                    <h3>Меню</h3>
+                    <p>Пицца, закуски и не только! Приготовлено из фермерских отборных продуктов. </p>
+                </div>
+                <div class="item-footer">
+                    <a href="/menu" class="link"><span>Подробнее</span></a>
+                </div>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img src="/img/HB.jpg" class="d-block w-100" alt="...">
+
+        <div class="post-item">
+            <div class="item-content">
+                <div class="item-icon anchor"><i/></div>
+                <div class="item-body">
+                    <h3>О нас</h3>
+                    <p>Узнайте больше информации о нашей фирме, истории успеха и правилах компании.  </p>
+                </div>
+                <div class="item-footer">
+                    <a href="/about" class="link"><span>Подробнее</span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="post-item">
+            <div class="item-content">
+                <div class="item-icon video"></div>
+                <div class="item-body">
+                    <h3>Контакты</h3>
+                    <p>Вся актуальная информация о работающих в период карантина ресторанах</p>
+                </div>
+                <div class="item-footer">
+                    <a href="/contacts" class="link"><span>Подробнее</span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="post-item">
+            <div class="item-content">
+                <div class="item-icon photo"></div>
+                <div class="item-body">
+                    <h3>Вакансии</h3>
+                    <p>Ищете работу мечты? Возможно вам именно к нам! Список требующихся работников</p>
+                </div>
+                <div class="item-footer">
+                    <a href="/work" class="link"><span>Подробнее</span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="post-item">
+            <div class="item-content">
+                <div class="item-icon gift"></div>
+                <div class="item-body">
+                    <h3>Об авторе</h3>
+                    <p>Информация о создателе сайта =)</p>
+                </div>
+                <div class="item-footer">
+                    <a href="/author" class="link"><span>Подробнее</span></a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script>
-        var myCarousel = document.querySelector('#carouselExampleSlidesOnly')
-        var carousel = new bootstrap.Carousel(myCarousel, {
-            interval: 6000,
-            wrap: false
-        })
-    </script>
 </body>
 </html>
