--- a/src/main/resources/templates/pattern/header.html
+++ b/src/main/resources/templates/pattern/header.html
@@ -1,9 +1,10 @@
 <div th:fragment="header">
-<!DOCTYPE html>
-<html>
-<head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <style>
 
         .navbar {
@@ -19,7 +20,7 @@
 
         .navbar__item a {
             font-size: 16px;
-            color: white;
+            color: #F5E2CD;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
@@ -30,7 +31,7 @@
         }
 
         .dropdown__main {
-            color: white;
+            color: #F5E2CD;
         }
 
         .dropdown__main:hover + .dropdown__items {
@@ -49,16 +50,14 @@
         .dropdown__item {
             padding: 5px;
             margin-top: 2px;
-            background: red;
+            background: #333;
         }
 
     </style>
-</head>
-<body>
 
-<div class="navbar">
+<div class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="navbar__item">
-        <a href="/">PizzaHub</a>
+        <a href="#">PizzaHub</a>
     </div>
     <div class="navbar__item">
         <a href="/">Главная</a>
@@ -89,18 +88,18 @@
             <div class="dropdown__main">Информация</div>
             <div class="dropdown__items">
                 <div class="dropdown__item">
-                    <a href="#">Первый</a>
+                    <a href="/about">О нас</a>
                 </div>
                 <div class="dropdown__item">
-                    <a href="#">Первый</a>
+                    <a href="/contacts">Контакты</a>
                 </div>
                 <div class="dropdown__item">
-                    <a href="#">Первый</a>
+                    <a href="/work">Вакансии</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</body>
-</html>
 </div>
+
+
