--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -4,6 +4,12 @@
     <title>Регистрация</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+        background-image: url("/img/backgr.png");
+        }
+
+    </style>
 </head>
 <body>
     <div class = "container text-center">
@@ -37,6 +43,12 @@
                     <label class="col-form-label col-4">Фамилия</label>
                     <div class="col-3">
                         <input type="text" class="form_control" th:field="*{lastName}" required/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-form-label col-4">Адрес</label>
+                    <div class="col-3">
+                        <input type="text" class="form_control" th:field="*{address}" required/>
                     </div>
                 </div>
 
