--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -42,6 +42,12 @@
                     </div>
                 </div>
                 <div class="form-group row">
+                    <label class="col-form-label col-4">Адрес</label>
+                    <div class="col-8">
+                        <input type="text" class="form_control" th:field="*{address}" required/>
+                    </div>
+                </div>
+                <div class="form-group row">
                     <label class="col-form-label col-4">Роль</label>
                     <div class="col-8">
                         <th:block th:each="role:${listRoles}">
