--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,11 +5,16 @@
     <title>Список юзеров</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <header th:insert="pattern/header :: header"></header>
+    <style>
+        #con1{
+            top: 30%;
+        }
+    </style>
 </head>
 <body>
-    <header th:insert="pattern/header :: header"></header>
     <div class="container text-center">
-        <div>
+        <div id="con1" class="container">
             <form th:action="@{/logout}" method="post">
                 <p>
                     Добро пожаловать <b>[[${#request.userPrincipal.principal.fullName}]]</b>
@@ -30,6 +35,7 @@
                         <th>Имя</th>
                         <th>Фамилия</th>
                         <th>Роли</th>
+                        <th>Адрес</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -40,6 +46,7 @@
                     <td th:text="${user.firstName}">Имя</td>
                     <td th:text="${user.lastName}">Фамилия</td>
                     <td th:text="${user.roles}">Роль</td>
+                    <td th:text="${user.address}">Адрес</td>
                     <td>
                         <a th:href="'/users/edit/' + ${user.id}" class="btn btn-warning">Edit</a>
                     </td>
@@ -49,8 +56,5 @@
             </table>
         </div>
     </div>
-
-
-
 </body>
 </html>
